# axi-dma

./: .gitignore  Cargo.toml  README.md  throughput.xls
axidma-pac/: Cargo.toml  axidma.svd
axidma-pac/src/: axi_dma.rs  channel.rs  generic.rs  lib.rs  sg_desc.rs
axidma-pac/src/axi_dma/: mm2s_curdesc.rs  mm2s_curdesc_msb.rs  mm2s_length.rs  mm2s_sa.rs  mm2s_sa_msb.rs  mm2s_taildesc.rs  mm2s_taildesc_msb.rs  s2mm_curdesc.rs  s2mm_curdesc_msb.rs  s2mm_da.rs  s2mm_da_msb.rs  s2mm_dmacr.rs  s2mm_dmasr.rs  s2mm_length.rs  s2mm_taildesc.rs  s2mm_taildesc_msb.rs  sg_ctl.rs
axidma-pac/src/channel/: curdesc.rs  curdesc_msb.rs  dmacr.rs  dmasr.rs  taildesc.rs  taildesc_msb.rs
axidma-pac/src/sg_desc/: app.rs  buf_addr.rs  buf_addr_msb.rs  control.rs  nxt_desc.rs  nxt_desc_msb.rs  status.rs
src/: async_transfer.rs  bd.rs  bd_ring.rs  buffer.rs  channel.rs  errno.rs  hw.rs  lib.rs  transfer.rs
