[package]
name = "axi-dma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axidma-pac = { path = "./axidma-pac" }
log = "0.4"
embedded-dma = "0.2.0"
spin = "0.9"


[features]
async = []

default = []

